@@ -2,6 +2,8 @@
 	* common/network.h, common/state.c, common/state.h, common/network.c,
 	server/player.c, server/admin.c: Send keepalive packets when
 	connection is idle, and disconnect when no reply is received.
+	* client/gtk/player.c: Don't beep for players which are seen during
+	connecting.
 
 2006-08-21  Bas Wijnen <shevek@fmf.nl>
 	* common/gtk/config-gnome.c: Added include file.
